Add playground walkthrough and a virtual-thread control mode
- Makefile: build / up / up-baseline / load / analyze / down / clean
- PLAYGROUND.md: 10-minute baseline-vs-agent tour with expected output
- jfront: JFRONT_EXECUTOR=virtual switches to a virtual-thread-per-task
  executor, so OBI's existing VT correlation can be compared against
  coroutines on the same topology (measured: all observed traces connected)
- README: correct the CIO-engine baseline from 0/10 to 2-3/10; the
  remainder connect only when the reading and writing threads coincide